--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "flickity": "^3.0.0"
+  }
 }
