--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "build": "vite build",
     "preview": "vite preview --host",
     "deploy": "surge ./dist keykaps.surge.sh",
-    "clean": "rm -rf ./dist ./node_modules"
+    "clean": "rm -rf ./dist ./node_modules",
+    "sass": "node-sass -w sass/ -o css/"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "reset-css": "^5.0.1"
+  }
 }
