--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "vite --host",
-    "build": "vite build",
+    "starto": "vite --host --open",
+    "build": "vite build --watch",
     "preview": "vite preview --host",
     "deploy": "surge ./dist keykaps.surge.sh",
-    "clean": "rm -rf ./dist ./node_modules",
-    "sass": "node-sass -w sass/ -o css/",
-    "sass-dev": "sass --watch --update --style=expanded /css:assets/css"
+    "clean": "rm -rf ./dist ./node_modules ./package-lock.json",
+    "sass": "sass ./scss:CSS --watch --style=compressed",
+    "clean:maps": "find /c/0_Programming/Full_Stack_Development/Groepswerken/GW1/css -name '*.css.map' -delete",
+    "clean:css": "find /c/0_Programming/Full_Stack_Development/Groepswerken/GW1/css -name '*.css' -delete"
   },
   "keywords": [],
   "author": "",
