--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "flickity": "^3.0.0"
+    "flickity": "^3.0.0",
+    "jsdoc": "^4.0.0"
   },
   "devDependencies": {
     "sass": "^1.57.1"
