Introducing swiper - img object fit not working

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "flickity": "^3.0.0",
-    "jsdoc": "^4.0.0"
+    "jsdoc": "^4.0.0",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "sass": "^1.57.1"
