--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "flickity": "^3.0.0",
+    "animate.css": "^4.1.1",
     "jsdoc": "^4.0.0"
   },
   "devDependencies": {
