David fixed everything

--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "keykaps",
   "version": "1.0.0",
   "description": "",
-  
-  
   "scripts": {
     "start": "vite --host",
     "starto": "vite --host --open",
@@ -15,7 +13,7 @@
     "clean:maps": "find ./css -name '*.css.map' -delete",
     "clean:css": "find ./css -name '*.css' -delete",
     "doc": "jsdoc -c jsdoc.json",
-    "buildo": "parcel build ./keykaps.html --dist-dir public --no-content-hash"
+    "buildo": "parcel build ./js/index.js --dist-dir public"
   },
   "keywords": [],
   "author": "",
