--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "deploy": "surge ./dist keykaps.surge.sh",
     "clean": "rm -rf ./dist ./node_modules ./package-lock.json",
     "sass": "sass ./scss:CSS --watch --style=compressed",
-    "clean:maps": "find ./css -name '*.css.map' -delete",
-    "clean:css": "find ./css -name '*.css' -delete",
+    "clean:maps": "find ./public -name '*.map' -delete",
     "doc": "jsdoc -c jsdoc.json",
     "buildIndex": "parcel build ./js/index.js --dist-dir public",
     "buildAdmin": "parcel build ./js/admin.js --dist-dir public",
